--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 }
 
 body {
-	background-color: #cb3bd8;
-	font-family: "Poppins", sans-serif;
+	background-color: #ca23b1;
+	font-family: poppins, sans-serif;
 }
 
 h1 {
 	margin: 30px 0px;
-	color: #ffffff;
+	color: #fff;
 	font-size: 42px;
 	font-weight: 900;
 	text-align: center;
@@ -86,7 +86,7 @@ h1 span {
 }
 
 .date-picker .dates .month .arrows:active {
-	background-color: #ac00ca;
+	background-color: #ca23b1;
 }
 
 .date-picker .dates .days {
@@ -101,6 +101,6 @@ h1 span {
 	color: #313131;
 }
 .date-picker .dates .days .day.selected {
-	background-color: #ac00ca;
+	background-color: #ca23b1;
 }
 
