--- a/style.css
+++ b/style.css
@@ -26,8 +26,10 @@ h1 span {
 	width: 100%;
 	max-width: 320px;
 	height: 60px;
-	background-color: #FFF;
+	background-color: rgb(255, 255, 255);
 	margin: 30px auto;
+	border-radius: 20px;
+	outline: 5px solid rgb(68, 71, 73);
 	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
 
 	cursor: pointer;
@@ -53,11 +55,16 @@ h1 span {
 .date-picker .dates {
 	display: none;
 	position: absolute;
-	top: 100%;
+	top: 200%;
 	left: 0;
 	right: 0;
+	width: 300px;
+	height: 300px;
+	border-radius: 20px;
+	outline: 5px solid rgb(99, 102, 104);
 
 	background-color: #FFF;
+
 }
 
 .date-picker .dates.active {
@@ -68,7 +75,7 @@ h1 span {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border-bottom: 2px solid #EEE;
+	border-bottom: 2px solid rgb(51, 137, 217)1;
 }
 
 .date-picker .dates .month .arrows {
@@ -102,5 +109,6 @@ h1 span {
 }
 .date-picker .dates .days .day.selected {
 	background-color: #ca23b1;
+	border-radius: 200px;
 }
 
